# sprout-tamagatchi-server

./: .env.example  README.md  main.py  pyproject.toml
tests/: test_main.py
